test_suite/tests/errors/max_entry_zero.rs
use banish::banish;

fn main() {
    banish! {
        #[max_entry = 0]
        @foo
            done? { return; }
    }
}
