test_suite/tests/errors/max_entry_zero.stderr
error: `max_entry` value must be greater than zero
 --> tests/errors/max_entry_zero.rs:5:23
  |
5 |         #[max_entry = 0]
  |                       ^
